evening spacing on register and login links (bug 667541)

--- a/media/css/impala/header.less
+++ b/media/css/impala/header.less
@@ -257,6 +257,11 @@
                 }
             }
             &.logout {
+                &.anonymous {
+                    a:first-child {
+                        padding-right: 4px;
+                    }
+                }
                 &:before {
                     background: 0;
                 }
